[package]
name = "nu-matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "nu-matrix-client"
path = "client/main.rs"

[[bin]]
name = "nu-matrix-server"
path = "server/main.rs"

[lib]
name = "nu_matrix_common"
path = "common/lib.rs"




[dependencies]
nu-plugin = "0.88.0"
nu-protocol = "0.88.0"
interprocess = { version = "~1.2", features = ["tokio_support"] }
tokio = { version = "~1.35", features = ["full"] }
futures = "~0.3"
json-rpc-types = "~1.3"

serde = { version= "1.0", features = ["derive"] }
serde_json = "~1.0"