[package]
name = "nu-matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "nu-matrix-client"
path = "client/main.rs"

[[bin]]
name = "nu-matrix-server"
path = "server/main.rs"

[lib]
name = "nu_matrix_common"
path = "common/lib.rs"




[dependencies]
nu-plugin = "0.88.0"
nu-protocol = "0.88.0"
interprocess = { version = "~1.2", features = ["tokio_support"] }
tokio = { version = "~1.35", features = ["full"] }
futures = "~0.3"
byteorder = "~1.5"
thiserror = "~1.0"
log = "~0.4"
simplelog = "~0.12"

serde = { version= "1.0", features = ["derive"] }
serde_json = "~1.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "~0.52", features = ["Win32", "Win32_System", "Win32_System_Diagnostics", "Win32_System_Diagnostics_ToolHelp", "Win32_Foundation"]}